# Silences

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  DESIGN.md  FEATURE.md  PRODUCT.md  README.md  api_debug.json  ecosystem.config.js  fix_tooloutcome.pl  restart-frontend.ps1  restart.ps1  settings.json
.impeccable/live/: config.json
.trash/: 1783088876778_present_task_list.rs
crates/silences-agent/: Cargo.toml
crates/silences-agent/src/: agent.rs  checkpoint_stack.rs  context.rs  lib.rs  queue.rs  surgery.rs
crates/silences-agent/src/toolcall/: add_task.rs  block_edit.rs  checkpoint.rs  command.rs  create.rs  edit.rs  end_task.rs  find.rs  glance.rs  grep.rs  list_checkpoints.rs  mod.rs  raw_edit.rs  raw_read.rs  read.rs  regret.rs  rename.rs  replace.rs  rollback.rs  start_task.rs  trash.rs  write.rs
crates/silences-agent/tests/: tools_test.rs
crates/silences-core/: Cargo.toml
crates/silences-core/src/: lib.rs
crates/silences-db/: Cargo.toml
crates/silences-db/src/: lib.rs
crates/silences-lib/: Cargo.toml
crates/silences-lib/bench-record/: benchmark-1783494259.json  scenario-a-1783492680.json  scenario-a-1783492689.json  scenario-a-1783492695.json  scenario-a-1783492873.json  scenario-a-1783493560.json
crates/silences-lib/bench-record/scenario-a-1783496252/: raw_messages.json  result.json
crates/silences-lib/bench-record/scenario-a-1783496649/: api_pairs.json  diff.patch  raw_messages.json  result.json
crates/silences-lib/bench-record/scenario-a-1783496649/debug/: api_pairs.jsonl
crates/silences-lib/bench-record/scenario-a-1783496748/: raw_messages.json  result.json
crates/silences-lib/bench-record/scenario-a-1783498043/: diff.patch  raw_messages.json  result.json
crates/silences-lib/bench-record/scenario-a-1783498580/: diff_bug1.patch
crates/silences-lib/src/: lib.rs
crates/silences-lib/tests/: benchmark.rs  benchmark_scenario_a.rs  collect_scenarios.rs  context_mgmt.rs  integration_test.rs
crates/silences-lib/tests/fixtures/: scenario_1_explore.json  scenario_2_edit.json  scenario_3_search.json  scenario_4_error.json  scenario_5_routing.json  scenario_6_useful_content.json  scenario_7_prefix_suffix.json
crates/silences-llm/: Cargo.toml
crates/silences-llm/src/: lib.rs
crates/silences-server/: Cargo.toml
crates/silences-server/src/: lib.rs  main.rs
docs/: API.md  baseline.md  benchmark-spec.md  context-lifecycle.md
healthcheck/: B1_test_py.ps1  B2_redirect.ps1  B3_hardcode.ps1
scripts/: pm2-restart.ps1  pm2-restart.sh  pm2-stop.ps1  pm2-stop.sh  start-backend.js  start-frontend.js
templates/: CONTEXT.md  SILENCES.md  implemention.md  realization.md  target.md
web/: .env.example  package-lock.json  package.json
web/src/: types.ts  utils.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatPanel.tsx  Markdown.tsx  Modals.tsx  RightSidebar.tsx  SettingsModal.tsx  Sidebar.tsx  SurgeryPanel.tsx
web/src/hooks/: useViewport.ts
