[workspace]
resolver = "3"
members = [
    "crates/silences-core",
    "crates/silences-llm",
    "crates/silences-db",
    "crates/silences-agent",
    "crates/silences-server",
    "crates/silences-lib",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
anyhow = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tokenizers = "0.21"
regex = "1"
fancy-regex = "0.14"
tokio-stream = "0.1"
encoding_rs = "0.8"
