[package]
name = "silences-llm"
version.workspace = true
edition.workspace = true

[dependencies]
silences-core = { path = "../silences-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures-util.workspace = true
anyhow.workspace = true
bytes = "1"
tokenizers.workspace = true
