[package]
name = "silences-server"
version.workspace = true
edition.workspace = true

[dependencies]
silences-core = { path = "../silences-core" }
silences-llm = { path = "../silences-llm" }
silences-db = { path = "../silences-db" }
silences-agent = { path = "../silences-agent" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true
async-stream = "0.3"
anyhow.workspace = true
